--- a/e-horse4/src/main/resources/baseDonnees.properties
+++ b/e-horse4/src/main/resources/baseDonnees.properties
@@ -2,7 +2,7 @@
 ds.driver=com.mysql.jdbc.Driver
 ds.url=jdbc:mysql://localhost:3306/db_unicorne?createDatabaseIfNotExist=true
 ds.user=root
-ds.mdp=root
+ds.mdp=Root
 
 ### Les infos de hibernate
 hb.auto=update
